Archive2/78/e183ef436841ab/output
main.cpp: In function 'int main()':
main.cpp:8:12: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
    printf(1);
            ^
