Archive2/78/e183ef436841ab/main.cpp
#include <iostream>
#include <string>
#include <vector>


int main()
{
   printf(1);
}
